# Hashtag-FastAPI

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 6d7b81b412cd_adicionado_itens_no_pedido.py  8a7fbcb318c8_primeira_migration.py
src/models/: models.py
src/routes/: auth_routes.py  order_routes.py
src/schemas/: schemas.py
src/utils/: dependecies.py  utils.py
