[project]
name = "hashtag-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "env",
    ".venv",
    "*/migrations/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E203"]

[tool.ruff.format]
# black-compatible by default
